<resources>
    <string name="app_name">MQS食品抽样系统</string>
    <string name="register_text">注册账户</string>
    <string name="forget_password_text">忘记密码</string>
    <string name="login_text">登录</string>
    <string name="account_text">账户</string>
    <string name="password_text">密码</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number_text">手机号</string>
    <string name="sms_code_text">验证码</string>
    <string name="receiver_sms_code">获取验证码</string>
    <string name="phone_number_tab_text">手机号登录</string>
    <string name="usename_login_tab_text">账户密码登录</string>
    <string name="my_task_text">我的任务</string>
    <string name="my_verifiy_text">我的检验</string>
    <string name="upgrade_app_text">软件更新</string>
    <string name="verify_text">校验</string>
    <string name="task_list_text">任务</string>
    <string name="plan_name_label">计划名称：</string>
    <string name="please_input_plan_name_hint">请输入计划名称</string>
    <string name="food_category_label">食品大类：</string>
    <string name="market_name_text">超市门店：</string>
    <string name="business_liscense_code_text">营业执照信用代码：</string>
    <string name="please_input_produce_date">请输入生产日期</string>
    <string name="produce_date_label">生产日期：</string>
    <string name="sample_product_name_label">样品名称：</string>
    <string name="enterprise_name_label">企业名称：</string>
    <string name="verify_begin_text">开始检验</string>
    <string name="can_not_verify_button">无法抽检</string>
    <string name="start_verify_button">开始抽检</string>
    <string name="remember_account_text">记住账户</string>
    <string name="save_and_submit_text">保存并提交</string>
    <string name="reason_text">原因：</string>
    <string name="reason_detail_text">具体原因：</string>
    <string name="please_input_reason_detail_hint">请输入具体原因描述</string>
    <string name="region_type_text">区域类型：</string>
    <string name="region_space_text">地区：</string>
    <string name="address_label">详细地址：</string>
    <string name="sampling_basic_info_title">抽样基础信息</string>
    <string name="task_resource_label">任务来源：</string>
    <string name="verify_org_label">检验机构：</string>
    <string name="sampling_code_label">抽样单编号：</string>
    <string name="main_category_label">*食品大类：</string>
    <string name="second_category_label">*食品亚类：</string>
    <string name="third_category_label">*食品次亚类：</string>
    <string name="forth_category_label">*食品细类：</string>
    <string name="verify_category_label">检验类别：</string>
    <string name="verify_category_1">执法抽检</string>
    <string name="verify_category_2">监督抽检</string>
    <string name="verify_category_3">卫生监测</string>
    <string name="verify_category_4">风险监测</string>
    <string name="verify_category_5">监督复查</string>
    <string name="sampling_unit_info_label">抽样单位信息</string>
    <string name="unit_name_label">单位名称：</string>
    <string name="unit_address_label">单位地址：</string>
    <string name="region_label">所属区域：</string>
    <string name="contact_label">联系人：</string>
    <string name="email_label">电子邮箱：</string>
    <string name="phone_label">电话：</string>
    <string name="reset_text">重置</string>
    <string name="next_step_text">下一步</string>
    <string name="upload_pic_text">上传照片</string>
    <string name="upload_video_text">上传视频</string>
    <string name="pervious_step_text">上一步</string>
    <string name="normal_product_title">普通食品抽样单</string>
    <string name="network_product_title">网购食品抽样单</string>
    <string name="food_product_title">食用农产品抽样单</string>
    <string name="please_input_username_hint">请输入用户名</string>
    <string name="please_input_password_hint">请输入密码</string>
    <string name="please_input_verify_code_hint">请输入验证码</string>
    <string name="login_successful">登录成功</string>
    <string name="login_failure">登录失败</string>
    <string name="enterprise_place_name_hint">选择抽样地点</string>
    <string name="enterprise_place_name_label">*抽样地点：</string>
    <string name="admin_region_label">*行政区域：</string>
    <string name="spinner_region_hint">区</string>
    <string name="spinner_street_hint">街道</string>
    <string name="agency_origin_area_name_label">*原产地：</string>
    <string name="agency_origin_area_name_hint">选择原产地</string>
    <string name="agency_origin_area_name_label1">*代理商生产所在地：</string>
    <string name="agency_origin_area_name_hint1">选择代理商生产所在地</string>
    <string name="food_type">*菜系类型</string>
    <string name="food_type_hint">请选择菜系类型</string>
    <string name="province_hint">省</string>
    <string name="town_hint">市</string>
    <string name="county_hint">区/县</string>
    <string name="verify_detail_text">
        校验说明(校验项均以指定的计划为校验范围进行校验)\n
1. 同一生产日期样品不重复校验项：任务号/方案名称+生产许可证编号(SC/QS)+样品名称+生产日期\n
2. 同一样品不超过5批次校验项：任务号/方案名称+生产许可证编号(SC/QS)+样品名称\n
3. 同一生产单位样品不能超过5批次校验项：任务号/方案名称+生产许可证编号(SC/QS)\n
4. 同一受检单位抽取的样品不能超过5批次校验项：任务号/方案名称+受检单位统一社会信用代码\n
5. 同一类别样品在同一连锁品牌的受检单位抽样批次不能超过5批次校验项：食品大类+连锁品牌\n
6. 该月内同一受检单位的走访次数不能超过5次校验项：受检单位统一社会信用代码+抽样日期(默认)\n
    </string>


    <string name="sample_link_name_data_api">app/samplelinks/%d</string>
    <string name="logout_text">登出</string>
    <string name="reason_label">原因：</string>
    <string name="resson_hint">请选择无法抽检原因</string>
    <string name="only_save_text">仅保存</string>
    <string name="please_select_sample_type">请选择食品大类</string>
    <string name="sample_level1_type_label">食品大类：</string>
    <string name="upload_photo_tip">抽样过程中须拍摄数码照片：抽样员与被抽样单位负责人和样品合照、营业执照及许可证、被抽样单位门面、封样前及封样后样品、样品摆放区和取样过程照片</string>
</resources>
