<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_user"
        android:hint="@string/phone_number_text"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/ic_password"
        android:hint="@string/sms_code_text"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toStartOf="@+id/getSmsCodeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:letterSpacing="2.0"
        android:text="@string/login_text"
        app:layout_constraintTop_toBottomOf="@+id/registerTextView"
        tools:layout_editor_absoluteX="72dp" />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/register_text"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <TextView
        android:id="@+id/forgetPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/middle"
        android:text="@string/forget_password_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/registerTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/getSmsCodeButton"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:text="@string/receiver_sms_code"
        android:textColor="@android:color/black"
        android:textSize="@dimen/middle"
        app:layout_constraintBaseline_toBaselineOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>