<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="16dp">

        <TextView
            android:id="@+id/basicTitleView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sampling_basic_info_title"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/large_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/planCodeView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/large_22"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/basicTitleView"
            tools:text="任务号/方案编号：234231029431" />

        <TextView
            android:id="@+id/resourceLabel"
            style="@style/AppTheme.Table.StaticText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/task_resource_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/planCodeView" />

        <TextView
            android:id="@+id/resourceTextView"
            style="@style/AppTheme.Table.StaticText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/resourceLabel"
            app:layout_constraintTop_toTopOf="@+id/resourceLabel"
            tools:text="深圳市市场和质量监督管理委员会XXX食品药品监督管理局" />

        <TextView
            android:id="@+id/planNameLabel"
            style="@style/AppTheme.Table.StaticText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/plan_name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resourceTextView" />


        <TextView
            android:id="@+id/planNameTextView"
            style="@style/AppTheme.Table.StaticText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/planNameLabel"
            app:layout_constraintTop_toTopOf="@+id/planNameLabel"
            tools:text="深圳市市场和质量监督管理委员会计划名称" />

        <TextView
            android:id="@+id/verifyOrgLabel"
            style="@style/AppTheme.Table.StaticText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/verify_org_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/planNameTextView" />

        <TextView
            android:id="@+id/verifyOrgnizationTextView"
            style="@style/AppTheme.Table.StaticText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/verifyOrgLabel"
            app:layout_constraintTop_toTopOf="@+id/verifyOrgLabel"
            tools:text="深圳市市场和质量监督管理委员会XXX食品药品监督管理局" />

        <TextView
            android:id="@+id/orderCodeLabel"
            style="@style/AppTheme.Table.StaticText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/sampling_code_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verifyOrgnizationTextView" />

        <TextView
            android:id="@+id/orderCodeTextView"
            style="@style/AppTheme.Table.StaticText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/orderCodeLabel"
            app:layout_constraintTop_toTopOf="@+id/orderCodeLabel"
            tools:text="9238247564382575" />

        <com.zhengdianfang.samplingpad.common.LabelView
            android:id="@+id/mainCategoryLabel"
            style="@style/AppTheme.Table.StaticText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/main_category_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orderCodeTextView" />

        <Spinner
            android:id="@+id/mainCategorySpinner"
            style="@style/AppTheme.Table.StaticText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/mainCategoryLabel"
            app:layout_constraintTop_toBottomOf="@+id/orderCodeTextView" />

        <com.zhengdianfang.samplingpad.common.LabelView
            android:id="@+id/secondCategoryLabel"
            style="@style/AppTheme.Table.StaticText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/second_category_label"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/orderCodeTextView" />

        <Spinner
            android:id="@+id/secondCategorySpinner"
            style="@style/AppTheme.Table.StaticText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/secondCategoryLabel"
            app:layout_constraintTop_toBottomOf="@+id/orderCodeTextView" />

        <com.zhengdianfang.samplingpad.common.LabelView
            android:id="@+id/thirdCategoryLabel"
            style="@style/AppTheme.Table.StaticText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/third_category_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainCategorySpinner" />

        <Spinner
            android:id="@+id/thirdCategorySpinner"
            style="@style/AppTheme.Table.StaticText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/thirdCategoryLabel"
            app:layout_constraintTop_toBottomOf="@+id/mainCategorySpinner" />

        <com.zhengdianfang.samplingpad.common.LabelView
            android:id="@+id/forthCategoryLabel"
            style="@style/AppTheme.Table.StaticText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/forth_category_label"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/secondCategorySpinner" />

        <Spinner
            android:id="@+id/forthCategorySpinner"
            style="@style/AppTheme.Table.StaticText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/forthCategoryLabel"
            app:layout_constraintTop_toBottomOf="@+id/secondCategorySpinner" />

        <TextView
            android:id="@+id/verifyCategoryLabel"
            style="@style/AppTheme.Table.StaticText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/verify_category_label"
            app:layout_constraintEnd_toStartOf="@+id/verifyCategoryRadioGroup"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thirdCategorySpinner" />

        <RadioGroup
            android:id="@+id/verifyCategoryRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/verifyCategoryLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/verifyCategoryLabel"
            app:layout_constraintTop_toTopOf="@+id/verifyCategoryLabel">

            <RadioButton
                android:id="@+id/verifyCategory1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/verify_category_1" />

            <RadioButton
                android:id="@+id/verifyCategory2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/verify_category_2" />

            <RadioButton
                android:id="@+id/verifyCategory3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/verify_category_3" />

            <RadioButton
                android:id="@+id/verifyCategory4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/verify_category_4" />

            <RadioButton
                android:id="@+id/verifyCategory5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/verify_category_5" />
        </RadioGroup>

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </android.support.constraint.ConstraintLayout>
</merge>
